--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <div class="container">
         <div class="header-wrapper">
-            <img src='../assets/img/logo.svg' alt="logo"/>
+            <img src='assets/img/logo.svg' alt="logo"/>
             <button class="btn">login</button>
         </div>
 
@@ -27,7 +27,7 @@
         <div class="cards_wrapper">
             <div class="card">
                 <h2 class="card_title">теория html + css.Структура приложения</h2>
-                <img class='card_img' src="../assets/img/img-1.svg" alt="">
+                <img class='card_img' src="assets/img/img-1.svg" alt="">
                 <p>Проговорим о том, что такое HTML и CSS. Создадим проект и рассмотрим его файловую структуру. Научимся
                     работать с макетом в Figma. Изучим 13 самых используемых тегов. Напишем HTML-структуру нашего
                     приложения.</p>
@@ -35,7 +35,7 @@
             <div class="card">
                 <h2 class="card_title">Стилизация
                     HTML-элементов</h2>
-                <img class='card_img' src="../assets/img/img-2.svg" alt="">
+                <img class='card_img' src="assets/img/img-2.svg" alt="">
                 <p>Подключим шрифты. Рассмотрим самый правильный способ добавления стилей. Рассмотрим синтаксис
                     написания
                     стилей. Напишем стили для элементов. Изучим популярные свойства css. Посмотрим как располагать
@@ -45,7 +45,7 @@
             <div class="card">
                 <h2 class="card_title">Адаптив.
                     Медиазапросы</h2><br/>
-                <img class='card_img' src="../assets/img/img-3.svg" alt="">
+                <img class='card_img' src="assets/img/img-3.svg" alt="">
                 <p>Сделаем наше приложение адаптивным, чтобы оно так же хорошо выглядело на планшетах и мобильных
                     телефонах.
                     Рассмотрим как работает св-во flex-wrap. Научимся делать адаптив, используя медиазапросы.</p>
@@ -57,16 +57,16 @@
 <footer>
     <div class="container">
         <ul>
-            <li><a href=""><img src="../assets/img/home-icon.svg" alt="">
+            <li><a href=""><img src="assets/img/home-icon.svg" alt="">
                 Home</a>
             </li>
-            <li><a href=""><img src="../assets/img/computer-icon.svg" alt="">
+            <li><a href=""><img src="assets/img/computer-icon.svg" alt="">
                 All Courses</a>
             </li>
-            <li><a href=""><img src="../assets/img/sandbox-icon.svg" alt="">
+            <li><a href=""><img src="assets/img/sandbox-icon.svg" alt="">
                 Sandbox</a>
             </li>
-            <li><a href=""><img src="../assets/img/map-pointer-icon.svg" alt="">
+            <li><a href=""><img src="assets/img/map-pointer-icon.svg" alt="">
                 Contacts</a>
             </li>
         </ul>
